Fix default image on Firefox

--- a/src/styles/components/_BookmarkCard.scss
+++ b/src/styles/components/_BookmarkCard.scss
@@ -9,7 +9,8 @@
     width: 30%;
     padding: 0 rem-calc(10) 0 0;
 
-    img {
+    img,
+    svg {
       width: 100%;
       height: auto;
     }
